--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,16 @@
 <html>
 <head>
   <title>Myapp</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<% flash.each do |k, v| %>
+  <%= content_tag :div, v, class: "flash #{k}" %>
+<% end %>
 
 <%= yield %>
 
