--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1,3 +1,7 @@
+body {
+  background: #4A4A4A;
+}
+
 .alert {
   background-color: #FFE2DF;
   font-color: #C00007;
@@ -10,4 +14,12 @@
 
 .push-right {
   float: right;
+}
+
+.center-text {
+  text-align: center;
+}
+
+a:hover {
+	text-decoration: underline;
 }
