--- a/app/views/homes/index.html.slim
+++ b/app/views/homes/index.html.slim
@@ -1,13 +1,8 @@
-h1 Santanu Rules!!!
-= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "push-right" if current_user
+h2.center-text.clear Welcome to
+h3.center-text MY PAGE
 
-- if current_user
-  | Hi,
-  = current_user.email
-  | , please update your profile.
-- else
-  = link_to "Sign Up", new_user_registration_path
-  </br>
-  = link_to "Sign In", new_user_session_path
-
+p 
+  | Hi, #{current_user.email}, please update your 
+  = link_to "profile", user_path(current_user)
+ 
 p This website is still under construction...
