--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,25 +1,16 @@
 doctype html
 html
   head
-    title Myapp
+    title= full_title(yield(:title))
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
   body
-    header class="navbar navbar-fixed-top navbar-inverse"
-      div.container
-        = link_to "my page", '#', id: "logo"
-        nav
-          ul.nav.navbar-nav.pull-right
-            li= link_to "Home", '#'
-            li= link_to "Help", '#'
-            - if current_user
-              li= link_to "Sign Out", destroy_user_session_path, method: :delete
-            - else
-              li= link_to "Sign In", new_user_session_path
-         
+    = render 'layouts/header'
+
     div.container
       - flash.each do |k, v|
         = content_tag :div, v, class: "flash #{k}"
 
       = yield
+      = render 'layouts/footer'
