--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -4,14 +4,16 @@
 @import "font-awesome";
 
 body {
-  background-color: #E8E8E7;
+  background-color: #EAEAEA;
   padding-top: 60px;
 }
 
+.container {
+  padding-top: 10px;
+}
+
 header {
-  
-    background-color: #01062B !important;
- 
+  background-color: #01062B !important;
 }
 
 .alert {
@@ -28,8 +30,16 @@ header {
   text-align: center;
 }
 
+.push-right {
+  float: right;
+}
+
+.push-left {
+  float: left;
+}
+
 a:hover {
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 a {
@@ -43,5 +53,45 @@ a {
 }
 
 .clear {
-  clear: both;     
+  clear: both;
+}
+
+
+/* footer */
+
+footer {
+
+  bottom: 0;
+  color: #E6E6E6;
+  font-size: 13px;
+  padding-top: 5px;
+
+  .shadow-top {
+    background-image: url("/assets/footerShadow.png");
+    background-position: center bottom;
+    background-repeat: no-repeat;
+
+    border-top: 1px solid #fff;
+    height: 14px;
+    margin-top: 50px;
+
+  }
+
+  a {
+    color: #c5c5c5;
+  }
+
+  a:hover {
+    color: #f1422d;
+  }
+
+  ul {
+    float: right;
+    list-style: none;
+  }
+
+  li {
+    float: left;
+    margin-left: 15px;
+  }
 }
