slide initial commit

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,1 +1,15 @@
-h4 Account Page
+h4 My Album
+
+div#myCarousel class='carousel slide'
+  ol.carousel-indicators
+    li.active data-target='#myCarousel' data-slide-to='0'
+    li data-target='#myCarousel' data-slide-to='1'
+
+  div.carousel-inner
+    div.item.active
+      img src="#{asset_path('under_construction.jpg')}" alt='First slide'
+    div.item
+      img src="#{asset_path('U_welcome_page_first.jpg')}" alt='Second slide'
+
+  a.carousel-control.left data-slide="prev" href="#myCarousel" &lsaquo;
+  a.carousel-control.right data-slide="next" href="#myCarousel" &rsaquo;
